# karlov-food-scraper

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-webhook.yml
src/karlov_food_scraper/: BuketScraper.py  FoodScraper.py  MenickaCzScraper.py  MenzaScraper.py  RespublicaScraper.py  ZlutaPumpaScraper.py  __init__.py  scraper.py  slack_lib.py
